Fixed alignement issue/project Section

--- a/codsoft_taskno2/style.css
+++ b/codsoft_taskno2/style.css
@@ -368,7 +368,7 @@ section {
   
   .project-img {
     border-radius: 2rem;
-    width: 90%;
+    width: 100%;
     height: 90%;
   }
   
